--- a/Média/index.html
+++ b/Média/index.html
@@ -4,18 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Média</title>
+    <title>Calculadora - Média</title>
     <link rel="stylesheet" href="./media.css">
 </head>
 <body>
-    <div id="grupo">
-        <h1>
-            Ricardo - CSS
-            <br> Camilly - Html
-            <br> Rafaum - Javascript
-            <br> MENÇÃO "D" PORFAVOR JUNIOR!!!!!!! 
-        </h1>
-    </div>
         <input type="number" maxlength="4" id="valor1">
         <input type="number" maxlength="4" id="valor2">
         <input type="number" maxlength="4" id="valor3">
